Fix horizontal scrolling

--- a/styling/about.css
+++ b/styling/about.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 .userimage {
     max-width: 100%;
     height: auto;
@@ -12,6 +16,7 @@
     text-align: center;
     align-content: center;
 }
+
 
 div.ribbon {
     background-color: chocolate;
@@ -44,7 +49,6 @@ div.ribbon::after {
 }
 
 .name {
-    display: block;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
     margin-bottom: 25px
